samples/_failures_safe/1761327483_992795_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95793b24.c: In function ‘main’:
./samples/SAFE/__tmp_95793b24.c:148:5: error: expected declaration or statement at end of input
  148 |     char input[MAX_TEXT_LEN];
      |     ^~~~
